tests/errors/sem_hw5_typeck_fn.kt
fun fib( i : Int) : Int {
    return 11
}
 
fun main() {
    var i: Int = 0 + fib(1,2);
}
// Test Output:[expect wrong # of params on line 6]
